--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,17 @@
             <scope>test</scope>
             <version>3.4.1</version>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-docker-compose</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
@@ -58,6 +66,9 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>3.4.1</version>
+                <configuration>
+                    <mainClass>com.swiftapi.Main</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
